# fastarg

./: .gitignore  LICENSE  Makefile  README.md  atest.py  fastarg.py  fastarg_example.py  main.py  requirements.txt  setup.cfg  test.sh  test_fastarg.py  todo.py
examples/todo_advanced/: main.py  requirements.txt
examples/todo_advanced/commands/: address.py  todo.py  user.py
examples/todo_simple/: main.py
research/: research.md  research_argparse_decorator.py  research_clock.py  research_decorator.py  research_decorator_basic.py  research_functools.py  research_inspect.py  test_decorators.py
src/: fastarg.py
src/fastarg/: __init__.py  main.py
tests/: test_fastarg.py
