[metadata]
name = fastarg
version = 0.0.6
author = Travis Luong
author_email = travis@travisluong.com
description = A lightweight argparse wrapper for building CLI tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/travisluong/fastarg
project_urls =
    Bug Tracker = https://github.com/travisluong/fastarg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src